[tool.poetry]
name = "recurrl"
version = "0.1.0"
description = "Reinforcement Learning with RNNs"
authors = ["Roberto Cipollone <cipollone.rt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ray = {extras = ["default", "rllib", "tune"], version = "^1.4.1"}
tensorflow = "^2.5.0"
nonmarkov-envs = { git = "ssh://git@github.com/whitemech/nonmarkov-envs.git", branch = "multidiscrete" }

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
pytest = "^6.2.3"
mypy = "^0.812"
isort = "^5.8.0"
black = "^20.8b1"
jedi = "^0.18.0"
flake8 = "^3.9.0"
tox = "^3.23.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
